# warpterm

./: .gitignore  Cargo.toml  README.md  ai_assistant.rs  build.rs  command_executor.rs  terminal_state.rs
.github/workflows/: ci.yml
examples/: ai_features_demo.rs  analytics_demo.rs  complete_integration.rs  comprehensive_features_demo.rs  comprehensive_integration_demo.rs  marketplace_demo.rs
src/: ai.rs  ai_assistant.rs  app.rs  command_executor.rs  command_handler.rs  completion.rs  config.rs  error.rs  history.rs  lib.rs  logger.rs  main.rs  multiplexer.rs  network.rs  performance.rs  plugins.rs  pty.rs  search.rs  security.rs  shell.rs  terminal.rs  terminal_state.rs  theme.rs  themes.rs  ui.rs
src/ab_testing/: mod.rs
src/ai/: completion.rs  context_assistant.rs  mod.rs
src/ai/providers/: command_completion.rs  openai_completion.rs
src/analytics/: aggregator.rs  collector.rs  dashboard.rs  mod.rs
src/api/: mod.rs
src/cicd/: mod.rs
src/collaboration/: mod.rs
src/config/: mod.rs
src/custom_metrics/: mod.rs
src/dev_tools/: mod.rs
src/export/: mod.rs
src/keysets/: mod.rs  presets.rs
src/marketplace/: client.rs  discovery.rs  installer.rs  mod.rs  package_manager.rs  security.rs  ui.rs
src/ml_insights/: mod.rs
src/scripting/: lua_engine.rs  mod.rs
src/themes/: mod.rs  standard.rs
src/visualization/: mod.rs
src/workflows/: mod.rs
workflows/build_ts/: package-lock.json
