[package]
name = "warp-terminal"
version = "0.1.0"
edition = "2021"
authors = ["Warp Terminal Team"]
description = "A modern, Rust-based terminal with AI built in"
license = "MIT"
repository = "https://github.com/warpdotdev/warp"

[dependencies]
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "warp"
path = "src/main.rs"
