[package]
name = "warp-terminal"
version = "1.0.0"
edition = "2021"
authors = ["Warp Terminal Team <team@warp.dev>"]
description = "A modern, Rust-based terminal with AI built in"
license = "MIT"
repository = "https://github.com/warpdotdev/warp"
homepage = "https://warp.dev"
documentation = "https://docs.warp.dev"
keywords = ["terminal", "shell", "ai", "productivity", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Terminal handling
crossterm = "0.27"
ratatui = "0.25"

# Process management
nix = "0.27"
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# File system
dirs = "5.0"
walkdir = "2.4"

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Regex and text processing
regex = "1.10"
fuzzy-matcher = "0.3"

# Encryption and security
ring = "0.17"
base64 = "0.21"

# Performance monitoring
sysinfo = "0.30"

# Plugin system
libloading = "0.8"
wasmtime = "15.0"

# UI components
unicode-width = "0.1"
unicode-segmentation = "1.10"

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "warp"
path = "src/main.rs"

[features]
default = ["ai", "plugins", "themes"]
ai = []
plugins = []
themes = []
gpu-acceleration = []
